--- a/TaskManagerAPI/TaskManagerAPI.csproj
+++ b/TaskManagerAPI/TaskManagerAPI.csproj
@@ -18,4 +18,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IRepository\" />
+    <Folder Include="IService\" />
+    <Folder Include="Service\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
