update login APIs

--- a/TaskManagerAPI/appsettings.json
+++ b/TaskManagerAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TaskManagerDb": "Server =(localdb)\\MSSQLLocalDb; database= TaskManager; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Issuer": "TIC",
+    "Audience": "Students",
+    "Key": "BHVYGVUNJIGTBJHBTFRTVUHBHBIUYFYTTFVGBINIUBYUV"
   }
 }
